[package]

name = "sgx_untrusted_time"
version = "0.1.40"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/rust-lang/time"
repository = "https://github.com/rust-lang/time"
documentation = "https://doc.rust-lang.org/time"
description = """
Utilities for working with time-related functions in Rust SGX. Not depends on libc

Limitation: **only** supports UTC timezone.
"""

[dependencies]
rustc-serialize = { version = "0.3", optional = true }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk" , rev="v1.1.0" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk" , rev="v1.1.0" }

[dev-dependencies]
log = "0.4"
winapi = { version = "0.3.0", features = ["std", "processthreadsapi", "winbase"] }
